# brainsurgery

./: .gitignore  pyproject.toml
brainsurgery/: arena.py  cli.py  model.py  plan.py  providers.py  transform.py
brainsurgery/transforms/: __init__.py  cast.py  copy.py  move.py
examples/: flexolmo.yaml  gpt2.yaml
